start html page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Love Calculator</title>
+  </head>
+  <body>
+	Love Calculator
+  </body>
+  <script src="calculator.js"></script>
+</html>
