--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<input type="input" id="name_p2"></input><br>
 	</div>
 	<div>
-	<button onclick="calculate()">Calculate</button>
+	<button type="submit" onclick="calculate()">Calculate</button>
 	</div>
 	<div id="result" style="display:none">
 		The score is <span id="score" style="font-weight: bold"></span>.<br>
